tests/ui/typech/implicit_literal_conversion_float_3.stderr
× error[LM4001]: mismatched types
   ╭─[implicit_literal_conversion_float_3.lm:2:5]
 1 │ fn foo() -> Double {
 2 │     0.0_f32
   ∶     ^^^^^^^ expected type Double, but found type Float...
 3 │ }
   ∶
 1 │ fn foo() -> Double {
   ∶             ^^^^^^ ...because of type defined here
 2 │     0.0_f32
   ╰──
   help: expected type Double
            found type Float