tests/ui/typech/implicit_literal_conversion_float_3.lm
fn foo() -> Double {
    0.0_f32
}
